# parser_test_task

./: .dockerignore  .env  .gitignore  Dockerfile  README.MD  config.py  database.py  logger.py  main.py  parser.py  pyproject.toml  result.py
files/: source.xlsx  source2.xlsx
tests/: conftest.py  database_test.py  env_test.py  parser_test.py  result_test.py  utils.py
